fix(ci): stabilize nightly backend and web-console catalog tests
Align historian catalog hook test with API-only fallback, harden formula placeholder expansion, make bootstrap node persistence idempotent, and raise server test heap to 10g.

Co-authored-by: Cursor <cursoragent@cursor.com>